[package]
name = "visibility-attribute"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
itertools = { version = "0.12.1", default-features = false }
proc-macro2 = "1.0.82"
quote = "1.0.36"
